# trade_database_manager

./: .gitignore  README.md  pyproject.toml  setup.cfg
doc/: KDB.md  data_orgnization.md  meta_enumerations.md  timescale.md
tools/: debug_kdb_table_2.py  debug_kdb_table_read_2.py  init_config.py
trade_database_manager/: config.py
trade_database_manager/core/: typedefs.py
trade_database_manager/core/kdb/: __init__.py  kdbmanager.py
trade_database_manager/core/kdb/qscripts/: q.q
trade_database_manager/core/sql/: __init__.py  sqlmanager.py  utils.py
trade_database_manager/manager/: __init__.py  fields_data_type.py  metadata_fut.py  metadata_sql.py  metadata_sql_cb.py  metadata_sql_fut.py  typedefs.py
