[metadata]
name = trade_database_manager
version = 0.0.1
description = A wrapper of kdb and sql for convenient trade data management
long_description = file: README.md
long_description_content_type = text/markdown
author = Y.Q. Cui
author_email = qianyun210603@hotmail.com
url = https://github.com/qianyun210603/trade_database_manager
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = AGPL-3.0
license_files = LICENSE

[options]
python_requires = >=3.9
packages = find: